--- a/generator/css/ui.css
+++ b/generator/css/ui.css
@@ -64,7 +64,7 @@
     margin-block-end: 5px;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
-    font-weight: bold;
+    font-weight: normal;
 }
 
 .form-horizontal {
